--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
 
     implementation 'com.jayrave.falkon:falkon-android:0.15-alpha'
 
+    implementation 'com.squareup.moshi:moshi:1.5.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
