added menu to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewActivity">
-
+        </activity>
+        <activity android:name=".Menu">
         </activity>
     </application>
 
