--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
 
     implementation 'com.squareup.moshi:moshi:1.5.0'
 
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
