--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.5.0'
 
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'xyz.belvi.mobilevision:barcodescanner:2.0.3'
 
     implementation 'com.mikepenz:iconics-core:3.0.2@aar'
     implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
