add social media icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'xyz.belvi.mobilevision:barcodescanner:2.0.3'
 
     implementation 'com.mikepenz:iconics-core:3.0.2@aar'
+    implementation 'com.mikepenz:iconics-views:3.0.2@aar'
     implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
